# Truvolley

./: .copier-answers.yml  Dockerfile  README.md  deployment.yaml  justfile  prefect.yaml  pyproject.toml  requirements.txt
Truvolley/: Glicko_Rating.py  ratings.py  scrape_data.py
